--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/profile-pic (4).png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>My Portfolio</title>
 </head>
@@ -39,7 +40,7 @@
         <button class="up"><a href="https://www.upwork.com/freelancers/~0150099e9719ffe00a" target="_blank" style="color: aliceblue;">Upwork</a></button>
         <button class="fi"><a href="https://www.fiverr.com/sh_design1?up_rollout=true" target="_blank" style="color: aliceblue;">Fiverr</a></button>
         <button class="li"><a href="https://www.linkedin.com/in/saiful-haider-ba117b258/" target="_blank" style="color: aliceblue;">linkedIn</a></button>
-    </div><br><br><br><br><br><br>
+    </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <footer>Copyright © 2012 - 2023 TermsFeed®. All rights reserved.</footer>
 </body>
 </html>
