--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/profile-pic (4).png" type="image/x-icon">
+    <link rel="shortcut icon" href="./profile-pic (4).png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>My Portfolio</title>
 </head>
 <body>
     <nav>
-        <img src="/ah logo-01.png" alt="">
+        <img src="./ah logo-01.png" alt="">
         <ul>
             <li> <a href="" style="color:rgb(232, 233, 233);">Home</a></li>
             <li><a href="" style="color: rgb(232, 233, 233);">About Us</a></li>
@@ -25,7 +25,7 @@
 
     <div class="parent">
         <div class="child">
-            <img src="/profile-pic (4).png" alt="PP">
+            <img src="./profile-pic (4).png" alt="PP">
         </div>
        
         <div class="child">
